--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,13 +12,13 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
-  containerName: azureDevopsTest
-  imageName: memoyu/azureDevopsTest
+  containerName: azuredevopstest
+  imageName: memoyu/azuredevopstest
   appsettings: Azure.Devops.Test/appsettings.Production.json
 
 stages:
 - stage: Build
-  displayName: Build Blog Api
+  displayName: Build Api
   jobs:
   - job: Build
     pool:
@@ -46,9 +46,9 @@ stages:
         tags: 'latest'
 
     - task: SSH@0
-      displayName: 'Run Blog Api Container'
+      displayName: 'Run Api Container'
       inputs:
-        sshEndpoint: 'HuaweiCloud'
+        sshEndpoint: 'HuaWeiCloud'
         runOptions: 'inline'
         inline: |
           echo "================= to del container ===================="
